--- a/infrastructure/dev-server-for-petclinic-cf-template.yml
+++ b/infrastructure/dev-server-for-petclinic-cf-template.yml
@@ -1,7 +1,7 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: >
   This cloudformation template prepares development environment for petclinic microservices app
-  User needs to select appropiate key name when launching the template.
+  User needs to select appropriate key name when launching the template.
 Parameters:
   KeyPairName:
     Description: Enter the name of your Key Pair for SSH connection
@@ -11,60 +11,60 @@ Resources:
   PetclinicSG:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupDescription: Enable HTTP and SSH for petclinic microservices
-        SecurityGroupIngress: 
-          - IpProtocol: tcp
-            FromPort: 22
-            ToPort: 22
-            CidrIp: 0.0.0.0/0
-          - IpProtocol: tcp
-            FromPort: 80
-            ToPort: 80
-            CidrIp: 0.0.0.0/0
-          - IpProtocol: tcp
-            FromPort: 8888
-            ToPort: 8888
-            CidrIp: 0.0.0.0/0
-          - IpProtocol: tcp
-            FromPort: 8761
-            ToPort: 8761
-            CidrIp: 0.0.0.0/0
-          - IpProtocol: tcp
-            FromPort: 8081
-            ToPort: 8081
-            CidrIp: 0.0.0.0/0
-          - IpProtocol: tcp
-            FromPort: 8082
-            ToPort: 8082
-            CidrIp: 0.0.0.0/0
-          - IpProtocol: tcp
-            FromPort: 8083
-            ToPort: 8083
-            CidrIp: 0.0.0.0/0
-          - IpProtocol: tcp
-            FromPort: 8080
-            ToPort: 8080
-            CidrIp: 0.0.0.0/0
-          - IpProtocol: tcp
-            FromPort: 9411
-            ToPort: 9411
-            CidrIp: 0.0.0.0/0
-          - IpProtocol: tcp
-            FromPort: 9090
-            ToPort: 9090
-            CidrIp: 0.0.0.0/0
-          - IpProtocol: tcp
-            FromPort: 7979
-            ToPort: 7979
-            CidrIp: 0.0.0.0/0
-          - IpProtocol: tcp
-            FromPort: 3000
-            ToPort: 3000
-            CidrIp: 0.0.0.0/0
-          - IpProtocol: tcp
-            FromPort: 9091
-            ToPort: 9091
-            CidrIp: 0.0.0.0/0
+    GroupDescription: Enable HTTP and SSH for petclinic microservices
+      SecurityGroupIngress: 
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 8888
+          ToPort: 8888
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 8761
+          ToPort: 8761
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 8081
+          ToPort: 8081
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 8082
+          ToPort: 8082
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 8083
+          ToPort: 8083
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 8080
+          ToPort: 8080
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 9411
+          ToPort: 9411
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 9090
+          ToPort: 9090
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 7979
+          ToPort: 7979
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 3000
+          ToPort: 3000
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 9091
+          ToPort: 9091
+          CidrIp: 0.0.0.0/0
   PetClinicLT:
     Type: AWS::EC2::LaunchTemplate
     Properties:
